syntax = "proto3";
package vjdmhd.lottery.lottery;

import "gogoproto/gogo.proto";

option go_package = "github.com/vjdmhd/lottery/x/lottery/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  
  string lottery_fee = 1 [
    (gogoproto.moretags)   = "yaml:\"lottery_fee\"",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false];
  BetSize bet_size = 2 [(gogoproto.moretags) = "yaml:\"bet_size\"", (gogoproto.nullable) = false];
}

message BetSize {

  string min_bet = 1 [
    (gogoproto.moretags)   = "yaml:\"min_bet\"",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false];

  string max_bet = 2 [
    (gogoproto.moretags)   = "yaml:\"max_bet\"",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false];
}